--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					<div class="lg:col-span-7 md:col-span-3 col-span-full max-h-full relative scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-8.webp" alt="">
 					</div>
-					<div class="lg:col-span-5 md:col-span-3 col-span-full flex flex-col gap-5">
+					<div class="lg:col-span-5 md:col-span-3 col-span-full flex flex-col gap-5 md:order-none order-first">
 						<h2 class="lg:text-7xl md:text-3xl xs:text-3xl font-bold text-white scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 							ЕГИПЕТ<br /> И РОССИЯ СЕГОДНЯ
 						</h2>
@@ -207,13 +207,13 @@
 
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="w-full" src="assets/img/img-10.webp" alt="">
-						<p class="text-regular text-white scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-white scrollme animateme md:order-none order-first" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 							Египет, в свою очередь, поставляет в Россию тропические фрукты, изделия из кожи, различные специи и знаменитые египетские ковры, которые давно стали отличительной частью и визитной карточкой арабской культуры. А самые изысканные ковры делаются вручную по полгода, и одно полотно стоит до миллиона рублей. 
 						</p>
 					</div>
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="w-full" src="assets/img/img-11.webp" alt="">
-						<p class="text-regular text-white scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-white scrollme animateme md:order-none order-first" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 							Кроме того, Россия заходит и в торговые сети Египта. Пока, правда, осторожно. Российский экспортный центр поддерживает 446 российских компаний, которые хотят завоевать рынок египетских соцсетей. Российские макароны, чай, сладости и масло можно найти на местных прилавках. В Каире работают пекарни, производящие русские медовики. А взыскательные египтяне пытаются открыть для себя вкус гречки — пока с переменным успехом. Тем не менее российские продукты представлены в 11 торгово-розничных сетях и онлайн.
 						</p>
 					</div>
@@ -228,7 +228,7 @@
 					<div class="lg:col-span-4 md:col-span-3 col-span-full max-h-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-12.webp" alt="">
 					</div>
-					<div class="lg:col-span-4 md:col-span-3 col-span-full max-h-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
+					<div class="lg:col-span-4 md:col-span-3 col-span-full max-h-full relative scrollme animateme md:order-none order-last" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-13.webp" alt="">
 					</div>
 					<div class="lg:col-span-2 md:col-span-3 col-span-full flex flex-col gap-5">
@@ -256,7 +256,7 @@
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M20.9993 41.8334C18.1174 41.8334 15.4091 41.2862 12.8744 40.1917C10.3396 39.0973 8.13477 37.6133 6.25977 35.7397C4.38477 33.8647 2.90074 31.6598 1.80768 29.1251C0.714627 26.5904 0.167405 23.882 0.166016 21.0001C0.166016 18.1181 0.713238 15.4098 1.80768 12.8751C2.90213 10.3404 4.38616 8.1355 6.25977 6.2605C8.13477 4.3855 10.3396 2.90147 12.8744 1.80842C15.4091 0.715359 18.1174 0.168137 20.9993 0.166748C23.8813 0.166748 26.5896 0.713971 29.1243 1.80842C31.6591 2.90286 33.8639 4.38689 35.7389 6.2605C37.6139 8.1355 39.0987 10.3404 40.1931 12.8751C41.2875 15.4098 41.8341 18.1181 41.8327 21.0001C41.8327 23.882 41.2855 26.5904 40.191 29.1251C39.0966 31.6598 37.6125 33.8647 35.7389 35.7397C33.8639 37.6147 31.6591 39.0994 29.1243 40.1938C26.5896 41.2883 23.8813 41.8348 20.9993 41.8334ZM30.3743 21.0001L15.791 30.3751V11.6251L30.3743 21.0001Z" fill="#F5F5F7"></path>
 						</svg>
 					</div>
-					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5">
+					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5 md:order-none order-first">
 						<h1 class="lg:text-7xl md:text-3xl xs:text-3xl font-bold scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">БУДУЩЕЕ ОТНОШЕНИЙ ДВУХ СТРАН</h1>
 						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 							16-й саммит БРИКС, который недавно прошёл в Казани, лишь укрепил сотрудничество двух стран. Владимир Путин на встрече с президентом Египта Абделем Фаттахом ас-Сиси в ходе первого дня саммита БРИКС подчеркнул, что на Египет приходится треть всего товарооборота между Россией и Африкой. А кроме строительства АЭС «Эль-Дабаа» обе страны также намерены развивать и российскую промышленную зоны в Суэцком канале.
@@ -278,7 +278,7 @@
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-15.webp" alt="">
 					</div>
 
-					<div class="lg:col-span-4 md:col-span-3 col-span-full max-h-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.5" data-to="0" data-opacity="0">
+					<div class="lg:col-span-4 md:col-span-3 col-span-full max-h-full relative scrollme animateme md:order-none order-last" data-when="view" data-translatey="100" data-from="0.5" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-16.webp" alt="">
 					</div>
 					<div class="lg:col-span-2 md:col-span-3 col-span-full flex flex-col gap-5">
@@ -293,13 +293,13 @@
 				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-10">
 						<img class="w-full scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0" src="assets/img/img-17.webp" alt="">
-						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 							Россия не забывает и о культурных контактах. Так, существует инициатива, по которой памятники египетским деятелям стоят в российских городах: например, бюст президенту Египта Гамалю Абдель Насеру установлен на территории Российского университета дружбы народов. А российские памятники стоят в Египте: бюст Пушкина установлен в центральном парке Каира, а статую Петра Первого планируют поставить в Александрии — городе-побратиме Санкт-Петербурга. 
 						</p>
 					</div>
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-10">
 						<img class="w-full scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0" src="assets/img/img-18.webp" alt="">
-						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 							Также существует программа поддержки египетских студентов. На 2024–2025 годы Правительство России выделило квоты на обучение 318 египетских студентов. Это хороший задел для укрепления личных связей между людьми.
 						</p>
 					</div>
@@ -308,7 +308,7 @@
 					<div class="lg:col-span-8 md:col-span-3 col-span-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-19.webp" alt="">
 					</div>
-					<div class="lg:col-span-4 md:col-span-3 col-span-full flex flex-col gap-5">
+					<div class="lg:col-span-4 md:col-span-3 col-span-full flex flex-col gap-5 md:order-none order-first">
 						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 							На встрече с президентом России Владимиром Путиным президент Египта сказал: «Мы поддерживаем расширение БРИКС, который становится платформой для того, чтобы противостоять негативному влиянию ситуации на международной арене. Вы упомянули, господин президент, создание атомной электростанции «Эль-Дабаа», а также создание российской промышленной зоны в зоне Суэцкого канала.
 						</p>
