--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 			</svg>
 			<h1>Россия и Египет</h1>
 		</section>
-		<section class="py-20 overflow-hidden" id="rossiya-i-egypt">
+		<section class="md:py-20 py-10 overflow-hidden" id="rossiya-i-egypt">
 			<div class="lg:container m-auto px-5 lg:px-20">
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 					<div class="flex flex-col gap-5 lg:col-span-6 md:col-span-3 col-span-full">
 						<h1 class="lg:text-7xl md:text-3xl xs:text-3xl font-bold scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">ИСТОРИЯ ОТНОШЕНИЙ РОССИИ И ЕГИПТА</h1>
 						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -113,7 +113,7 @@
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-1.webp" alt="">
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 					<div class="lg:col-span-9 md:col-span-3 col-span-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-2.webp" alt="">
 					</div>
@@ -126,7 +126,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5">
 						<img src="assets/img/img-3.webp" alt="" class="scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -140,9 +140,9 @@
 						</p>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 					<div class="lg:col-span-2 md:col-span-3 col-span-full">
-						<p class="text-regular text-gray-700 mb-5 scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 							Первые отношения Египта с Россией начались с археологических экспедиций, которые в середине XIX века на свои деньги организовывал легендарный нынче Владимир Голенищев. Но в те годы и вплоть до середины ХХ века Египет был протекторатом Великобритании. Англичане контролировали Суэцкий канал, приносивший в казну огромные деньги. Всё изменилось из-за Второй мировой войны. Дипломатические отношения между странами были установлены уже в 1943 году. А самый активный период начался в 1950-е годы.
 						</p>
 					</div>
@@ -150,7 +150,7 @@
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-5.webp" alt="">
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:gap-10 gap-5">
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5">
 						<img src="assets/img/img-6.webp" alt="" class="scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -166,9 +166,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="py-20 overflow-hidden bg-black" id="rossiya-i-egypt-segodnia">
+		<section class="md:py-20 py-10 overflow-hidden bg-black" id="rossiya-i-egypt-segodnia">
 			<div class="lg:container m-auto px-5 lg:px-20">
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 					<div class="lg:col-span-7 md:col-span-3 col-span-full max-h-full relative scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-8.webp" alt="">
 					</div>
@@ -181,7 +181,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 
 					<div class="lg:col-span-2 md:col-span-3 col-span-full flex flex-col gap-5">
 						<p class="text-regular text-white scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -203,7 +203,7 @@
 						</svg>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="w-full" src="assets/img/img-10.webp" alt="">
@@ -218,7 +218,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:gap-10 gap-5">
 					
 					<div class="lg:col-span-2 md:col-span-3 col-span-full flex flex-col gap-5">
 						<p class="text-regular text-white scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -243,9 +243,9 @@
 			</div>
 		</section>
 
-		<section class="py-20 overflow-hidden bg-gray-200" id="rossiya-i-egypt-future">
+		<section class="md:py-20 py-10 overflow-hidden bg-gray-200" id="rossiya-i-egypt-future">
 			<div class="lg:container m-auto px-5 lg:px-20">
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 					<div class="lg:col-span-6 md:col-span-3 col-span-full max-h-full relative videoBlock scrollme animateme" data-when="view" data-translatey="-100" data-from="0.8" data-to="0" data-opacity="0">
 						<video class="lg:absolute top-0 left-0 w-full h-full object-cover object-center">
 							<source src="assets/videos/video_2.mp4" type="video/mp4">
@@ -263,7 +263,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
 
 					
 					<div class="lg:col-span-2 md:col-span-3 col-span-full flex flex-col gap-5">
@@ -290,21 +290,21 @@
 						</p>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
-					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:mb-10 gap-5 md:mb-10 mb-5">
+					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col md:gap-10 gap-5">
 						<img class="w-full scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0" src="assets/img/img-17.webp" alt="">
 						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 							Россия не забывает и о культурных контактах. Так, существует инициатива, по которой памятники египетским деятелям стоят в российских городах: например, бюст президенту Египта Гамалю Абдель Насеру установлен на территории Российского университета дружбы народов. А российские памятники стоят в Египте: бюст Пушкина установлен в центральном парке Каира, а статую Петра Первого планируют поставить в Александрии — городе-побратиме Санкт-Петербурга. 
 						</p>
 					</div>
-					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-10">
+					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col md:gap-10 gap-5">
 						<img class="w-full scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0" src="assets/img/img-18.webp" alt="">
 						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 							Также существует программа поддержки египетских студентов. На 2024–2025 годы Правительство России выделило квоты на обучение 318 египетских студентов. Это хороший задел для укрепления личных связей между людьми.
 						</p>
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 md:gap-10 gap-5">
 					<div class="lg:col-span-8 md:col-span-3 col-span-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-19.webp" alt="">
 					</div>
